# MahouN

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .گزارش_ماهون_برای_غیرفنی‌ها.md.kate-swp  AGENT_RULES.md  AUDIT_MAHOUN_INGESTION_PIPELINE.md  BACKUP_MIGRATION_GUIDE.md  BACKUP_QUICK_START.md  BULLISH_CASE_ANALYSIS.md  CHANGELOG_DOMAIN_MODULES.md  CODE_REALITY_CHECK.md  CRITICAL_DISCOVERY.md  DOCKER_UPDATE_REQUIREMENTS.md  Dockerfile.backend  Dockerfile.mcp  FORENSIC_ANALYSIS_REPORT.md  FORENSIC_CODE_AUDIT_FINAL.md  FORTRESS_DEVELOPER_GUIDE.md  GOVERNANCE_FIX_REPORT.md  IEEE_COMPLIANCE_AUDIT.md  INGESTION_FULL_AUDIT.md  INGESTION_PIPELINE_FORENSIC_AUDIT.md  INSTALL_DEPENDENCIES.md  ISSUE_1_DUAL_MODE_ANALYSIS.md  ISSUE_2_RACE_CONDITION_ANALYSIS.md  MAHOUN_REAL_AUDIT_FA.md  MCP_ORCHESTRATOR_DESIGN.md  MINIMAL_SETUP.md  Makefile  Makefile.backend  OPEN_SOURCE_STRATEGY.md  PHASE2_CAPABILITY_EXTRACTION_PLAN.md  PIPELINE_ISSUES_PRIORITY_ROADMAP.md  PUBLIC_RELEASE_STRATEGY.md  README.md  README_FA.md  REALISTIC_MARKET_ANALYSIS.md  REAL_WORLD_USE_CASE.md  REASONING_ENGINE_FORENSIC_AUDIT.md  REPORT_TOPOLOGY_RECONCILIATION.md  (+43 more)
.kilo/: agent-manager.json  package-lock.json
api/: config.py  database.py  main.py
docs/: API_REFERENCE.md  CI_ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  GOVERNANCE_AUDIT_SUMMARY_FA.md  GOVERNANCE_HARDENING_REPORT.md  GOVERNANCE_INTEGRATION.md  GOVERNANCE_OVERVIEW.md
first_step_ci_cd/: test_4_logic_light.py
frontend/: Dockerfile.dev  package.json  start-frontend.sh
mahoun/: __init__.py  switchboard.py
reasoning_logic/: __init__.py  backward_chaining.py  config.py  core.py  explanation.py  forward_chaining.py  knowledge_base.py  ontology.py  parser.py  probabilistic.py  profiler.py  rete.py  temporal.py  tms.py  unification.py
scripts/: analyze-public-exposure.sh  ci_check_hardcodes.py  ci_make_reality_report.py  ci_run_first_step.sh  ci_scan_secrets.py  create-community-edition.sh  dependency_hunter.sh  deploy_server.sh  governance_repo_audit.sh  quick_system_test.py  restore.py  restore.sh  unified_ingest.py  verify-gitignore.sh  verify_governance.py
tests/: __init__.py  conftest.py  nightmare_aml_test.py  reasoning_logic_test.py  test_adversarial_detector.py  test_api_monitoring_very_hard.py  test_config_production.py  test_config_validator.py  test_critic_agent.py  test_deep_chaining_stress.py  (+58 more)
(+1526 files in other folders)
